# discobot-rs

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  fly.toml
.github/workflows/: container-image.yml  fly.yml
src/: bot.rs  main.rs
src/bot/: commands.rs  mod.rs
