[package]
name = "discobot-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#  A Rust library for the Discord API.
serenity = { version = "0.12", default-features = false, features = [
    "default_no_backend",
    "cache",
    "framework",
    "voice",
    "http",
] }

#  An async Rust library for the Discord voice API.
songbird = { version = "0.5", default-features = false, features = [
    "driver",
    "gateway",
    "serenity",
    "tungstenite",
    "builtin-queue",
] }

reqwest = { version = "0.12", default-features = false }
symphonia = { version = "0.5", features = ["aac", "mp3", "isomp4", "alac"] }
tokio = { version = "1", features = ["macros", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
poise = { version = "0.6", default-features = false, features = ["cache"] }

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls", "serenity/rustls_backend", "songbird/rustls"]
native-tls = [
    "reqwest/native-tls",
    "serenity/native_tls_backend",
    "songbird/native",
]
